welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:7: error: too many arguments for method baisseBrosse: ()Unit
          baisseBrosse(
                      ^