welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
    while(!estSurBiscuit()){
      if(!estFaceMur()){
        if(isFacingTrail() == true){
          avance()
          baisseBrosse(
          leveBrosse())
        }
      }
      else(gauche())
    }
}


def isFacingTrail():Boolean = {
  var caseVerte:Boolean = false
  if(!estFaceMur()){
    avance()
    if(getCouleurSol()==Color.green){
      caseVerte = true
    }
    recule()
    return(caseVerte)
  }
  else(return(caseVerte))
}